動的Webデザイン 演習問題②

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           <h3 class="service-wrap__item-content-ttl">デジタルトランスフォーメーション事業</h3>
           <p class="service-wrap__item-content">人々の生活をよりよいものに改革するために洋々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
         </div>
+        
       </div>
       <a href="service.html" class="service__link">サービス一覧を見る</a>
     </div>
@@ -128,7 +129,7 @@
     </div>
 
     <div id="company">
-      <div class="company company_container">
+      <div class="company_container">
         <div class="company__item">
           <h2>会社概要</h2>
         </div>
