--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
 
     <div id="blog">
-      <div class="container">
+      <div class="blog_container">
         <h2 class="common__ttl">社員ブログ</h2>
         <div class="flex__item blog-wrap">
 
@@ -128,14 +128,15 @@
       </div>
     </div>
 
-    <div id="company">
-      <div class="company_container">
-        <div class="company__item">
-          <h2>会社概要</h2>
-        </div>
-      </div>
+    <div class="top-company-list">
+      <!-- top-company -->
+      <section class="top-company-item">
+        <a href="company.html" class="top-company-link top-company-item-link">
+          会社概要
+        </a>
+      </section>
+      <!-- top-company end -->
     </div>
-
 
     <div id="contact">
       <div class="container">
@@ -146,65 +147,51 @@
     </div>
   </main>
 
-  <footer class="footer flex__item">
-    <p>@2020 TECH inc.</p>
-    <nav class="footer__nav">
-      <ul class="footer__nav-list flex__item">
-        <li>
-          <span class="footer__nav-list__item">
-            <a href="index.html" class="footer__nav-list-link">ホーム</a>
-          </span>
-        </li>
-        <li>
-          <span class="footer__nav-list__item">
-            <a href="service.html" class="footer__nav-list-link">事業内容</a>
-          </span>
-        </li>
-        <li>
-          <span class="footer__nav-list__item">
-            <a href="blog.html" class="footer__nav-list-link">社員ブログ</a>
-          </span>
-        </li>
-        <li>
-          <span>
-            <a href="company_detail.html" class="footer__nav-list-link">会社概要</a>
-          </span>
-        </li>
-      </ul>
-    </nav>
+  <footer class="footer">
+    <div class="footer-inner">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="footer_link">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="footer_link">事業内容</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="footer_link">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="footer_link">会社概要</a></li>
+        </ul>
+      </nav>
+    </div>
   </footer>
 
   <div id="modal" class="modal">
     <div class="modal__content">
       <div class="modal__content-inner">
-
-        <form class="form" name="contact" method="POST">
-          <div class="form-item">
-            <p class="form-item-label">
-              <span class="form-item-label-required">必須</span>会社名
-            </p>
-            <input type="text" name="company" class="form-item-input" placeholder="例）株式会社TECH">
-          </div>
-          <div class="form-item">
-            <p class="form-item-label"><span class="form-item-label-required">必須</span>氏名</p>
-            <input type="text" name="name" class="form-item-input" placeholder="例）山田太郎">
-          </div>
-          <div class="form-item">
-            <p class="form-item-label"><span class="form-item-label-required">必須</span>電話番号</p>
-            <input type="tel" name="tel" class="form-item-input" placeholder="例）09012345678">
-          </div>
-          <div class="form-item">
-            <p class="form-item-label"><span class="form-item-label-required">必須</span>メールアドレス</p>
-            <input type="email" name="email" class="form-item-input" placeholder="例）test@example.com">
-          </div>
-          <div class="form-item">
-            <p class="form-item-label"><span class="form-item-label-required">必須</span>お問い合わせ内容</p>
-            <textarea name="textarea" class="form-item-textarea"></textarea>
-          </div>
-          <input type="submit" class="form-btn" value="送信する">
-        </form>
-
-        <input type="button" id="closeBtn" value="閉じる">
+        <div class="modal__closeBtn">
+          <input type="button" id="closeBtn" value="×" class="closeBtn" />
+        </div>
+        <h2 class="modal-contact-ttl ttl">お問い合わせ</h2>
+        <div class="contact ptb-m">
+          <form class="contact-form" action="index.html" method="post">
+            <div class="contact-form-item">
+              <label class="contact-form-item-name" for="company">会社名</label>
+              <input type="text" id="modal_company" class="contact-form-item-input" />
+            </div>
+            <div class="contact-form-item">
+              <label class="contact-form-item-name" for="name">お名前<span
+                  class="contact-form-item-required">*</span></label>
+              <input type="text" id="name" class="contact-form-item-input" required />
+            </div>
+            <div class="contact-form-item">
+              <label class="contact-form-item-name" for="email">メールアドレス<span
+                  class="contact-form-item-required">*</span></label>
+              <input type="email" id="email" class="contact-form-item-input" required />
+            </div>
+            <div class="contact-form-item">
+              <label class="contact-form-item-name" for="comment">お問い合わせ内容<span
+                  class="contact-form-item-required">*</span></label>
+              <textarea id="comment" rows="8" cols="80" class="contact-form-item-textarea" required></textarea>
+            </div>
+            <input type="submit" value="お申し込み" class="contact-form-submit" />
+          </form>
+        </div>
       </div>
     </div>
   </div>
