--- a/service.html
+++ b/service.html
@@ -104,32 +104,18 @@
     </div>
   </main>
 
-  <footer class="footer flex__item">
-    <p>@2020 TECH inc.</p>
-    <nav class="footer__nav">
-      <ul class="footer__nav-list flex__item">
-        <li>
-          <span class="footer__nav-list__item">
-            <a href="index.html" class="footer__nav-list-link">ホーム</a>
-          </span>
-        </li>
-        <li>
-          <span class="footer__nav-list__item">
-            <a href="service.html" class="footer__nav-list-link">事業内容</a>
-          </span>
-        </li>
-        <li>
-          <span class="footer__nav-list__item">
-            <a href="blog.html" class="footer__nav-list-link">社員ブログ</a>
-          </span>
-        </li>
-        <li>
-          <span>
-            <a href="company_detail.html" class="footer__nav-list-link">会社概要</a>
-          </span>
-        </li>
-      </ul>
-    </nav>
+  <footer class="footer">
+    <div class="footer-inner">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="footer_link">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="footer_link">事業内容</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="footer_link">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="footer_link">会社概要</a></li>
+        </ul>
+      </nav>
+    </div>
   </footer>
 
   <div id="modal" class="modal">
