--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="blog.html" class="header__nav-list-link">社員ブログ</a>
         </li>
         <li>
-          <a href="company_detail.html" class="header__nav-list-link">会社概要</a>
+          <a href="company.html" class="header__nav-list-link">会社概要</a>
         </li>
       </ul>
     </nav>
@@ -38,21 +38,22 @@
         <li><a href="index.html">ホーム</a></li>
         <li><a href="service.html">事業内容</a></li>
         <li><a href="blog.html">社員ブログ</a></li>
-        <li><a href="company_detail.html">会社概要</a></li>
+        <li><a href="company.html">会社概要</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
+
     <div id="firstview">
       <div class="firstview__item">
         <h2 class="firstview__item-ttl">最新のテクノロジーで社会問題を解決</h2>
-        <p  class="firstview__item-txt">Solving social issues with the latest technology</p>
+        <p class="firstview__item-txt">Solving social issues with the latest technology</p>
       </div>
     </div>
 
     <div id="content">
-      <div class="container content_container">
+      <div class="content_container">
         <div class="content__item">
           <h2>株式会社TECHの想い</h2>
           <p class="content__item-txt">
@@ -66,25 +67,25 @@
       <h2 class="common__ttl">サービス</h2>
       <div class="service-wrap">
 
-        <div class="service-wrap__item--first">
+        <div class="service-wrap__item">
           <img src="img/service1.png" alt="">
           <h3 class="service-wrap__item-content-ttl">IT人材育成事業</h3>
           <p class="service-wrap__item-content">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
         </div>
 
-        <div class="service-wrap__item--second">
+        <div class="service-wrap__item">
           <img src="img/service2.png" alt="">
           <h3 class="service-wrap__item-content-ttl">コーチング事業</h3>
           <p class="service-wrap__item-content">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
         </div>
 
-        <div class="service-wrap__item--third">
+        <div class="service-wrap__item">
           <img src="img/service3.png" alt="">
           <h3 class="service-wrap__item-content-ttl">ITコンサル事業</h3>
           <p class="service-wrap__item-content">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
         </div>
 
-        <div class="service-wrap__item--forth">
+        <div class="service-wrap__item">
           <img src="img/service4.png" alt="">
           <h3 class="service-wrap__item-content-ttl">デジタルトランスフォーメーション事業</h3>
           <p class="service-wrap__item-content">人々の生活をよりよいものに改革するために洋々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
@@ -139,7 +140,7 @@
     </div>
 
     <div id="contact">
-      <div class="container">
+      <div class="contact_container">
         <h2 class="common__ttl">お問い合わせ</h2>
         <p class="contact-content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       </div>
